# context-lens

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/rules/: architecture.md  build-phases.md  coding-standards.md  mistakes-and-decisions.md
context_lens/: __init__.py  reporter.py
context_lens/classifiers/: __init__.py  beginning_anchored.py  cliff_detector.py  distractor_confusion.py  instruction_drift.py  recency_bias.py  tool_burial.py
context_lens/engine/: __init__.py  measurement.py  probes.py  snapshots.py
context_lens/instrumentation/: __init__.py  langgraph.py
context_lens/report/: renderer.py  template.html
docs/: index.md
examples/: anthropic_raw.py  reguliq_demo.py  test_reguliq.py  unhealthy_agent_demo.py
notebooks/: 01_research_experiments.ipynb
tests/: conftest.py  test_classifiers.py  test_instrumentation_langgraph.py  test_measurement.py  test_probes.py  test_renderer.py  test_report.py  test_reporter.py  test_snapshots.py
